added client generation and java 8 support